update some get funcs

--- a/doc/test.ini
+++ b/doc/test.ini
@@ -18,7 +18,7 @@ str3 = abcd;asdf
 integer1 = -114514
 integer2 = [10,50,-999,32768]
 
-#the last parameter will be get by function @creader_get
+#the last key and value will be get by function @creader_get
 integer2 = [11,51,-998,-32767]
 
 double1 = -0.141414
