using stdlib to avoid error

--- a/doc/test.ini
+++ b/doc/test.ini
@@ -16,10 +16,10 @@ str3 = abcd;asdf
 
 [section2]
 integer1 = -114514
-integer2 = [10,50,-999,32768]
+integer2 = [10,0x50,-999,32768]
 
 #the last key and value will be get by function @creader_get
-integer2 = [11,51,-998,-32767]
+integer2 = [11,0x51,-998,-32767]
 
 double1 = -0.141414
 double2 = [2.71,3.1415,-32,-0.64]
